# bytecode-vm

./: .gitignore  CMakeLists.txt  README.md
doc/: assembly-grammar.md  assembly.md  src.rfx
include/: common.h  virtual_machine.h  vm_context.h  vm_proc.h
include/assembler/: assembler.h  bytecode_compiler.h  bytecode_format.h  parser.h  src_loc.h  test.asm  token.h  tokenizer.h
include/common/: common.h  shared_object.h
include/vm/: bytecode_linker.h  memory.h  shared_object.h  virtual_machine.h  vm_context.h  vm_proc.h
src/: main.cpp  virtual_machine.cpp  vm_context.cpp
src/assembler/: assembler.cpp  assembler.h  assembler_instr.cpp  assembler_main.cpp  bytecode_compiler.cpp  bytecode_format.cpp  parser.cpp  parser.h  src_loc.cpp  token.cpp  tokenizer.cpp
src/vm/: virtual_machine.cpp  vm_context.cpp
test/assembler/: assembler_test.cpp  bytecode_format_test.cpp
test/common/: shared_object_test.cpp
test/example/: example1.asm  example2.asm  test.asm
